# rinha-backend-2026-rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-build.yml
api/: Cargo.toml
api/src/: main.rs
haproxy/: haproxy.cfg
pre-processor/src/: main.rs
