[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
atoi = "2.0"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tower = { version = "0.4", features = ["util"] }
mimalloc = "0.1"


